--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,7 +26,7 @@ jobs:
           user: yurseria
           template: classic
           base: header, activity, community, repositories, metadata
-          config_timezone: Asia/Tokyo
+          config_timezone: Asia/Seoul
           plugin_followup: yes
           plugin_followup_sections: repositories
           plugin_languages: yes
@@ -48,3 +48,7 @@ jobs:
           plugin_topics_limit: 15
           plugin_topics_mode: icons
           plugin_topics_sort: stars
+          plugin_achievements: yes
+          plugin_achievements_display: compact
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
